--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 
         set PGPASSWORD={用户密码}&&"C:\Program Files\PostgreSQL\15\bin\pg_dump.exe" -h {数据库IP} -p {端口默认5432}  -U {用户名} -d {数据库} -s > db.sql
+        set PGPASSWORD={用户密码}&&"C:\Program Files\PostgreSQL\15\bin\pg_dump.exe" -h {数据库IP} -p {端口默认5432}  -U {用户名} -d {数据库} -s > db.sql
 
         4
 
@@ -42,9 +43,8 @@
             if (evt.key === 'F1') {
                 evt.preventDefault();
 
+                
 
-
-                console.log(names)
             }
         })
 
@@ -86,7 +86,7 @@
                 console.log(start,end, textarea.value.substring(start,end))
         */
 
-        
+
     </script>
 </body>
 
