更新服务器

--- a/app/backend/settings.html
+++ b/app/backend/settings.html
@@ -2,20 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/settings.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>设置 - 瑜伽约课微信小程序</title>
+  <link rel="stylesheet" href="css/settings.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
+  <script type="module" src="../components/custom-actions.js"></script>
 </head>
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
   <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
-    <script src="js/settings.js"></script>
+  <custom-actions bind="customActions"></custom-actions>
+  <script src="js/settings.js"></script>
 </body>
 
 </html>
