--- a/app/backend/courses.html
+++ b/app/backend/courses.html
@@ -5,25 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>编辑</title>
-  <link rel="stylesheet" href="css/editor.css">
+  <title>课程列表 - 瑜伽约课微信小程序</title>
+  <link rel="stylesheet" href="css/courses.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
+  <script type="module" src="../components/custom-action-items.js"></script>
   <script type="module" src="../components/custom-bottom-bar.js"></script>
-  <script type="module" src="../components/custom-dialog-actions.js"></script>
-  <script src="../components/toast.js"></script>
-
 </head>
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
   <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
-  <textarea bind="textarea"></textarea>
+  <custom-action-items></custom-action-items>
   <custom-bottom-bar bind="customBottomBar" @submit="navigate"></custom-bottom-bar>
-  <custom-toast id="toast"></custom-toast>
-  <script src="js/editor.js"></script>
-
+  <script src="js/courses.js"></script>
 </body>
 
 </html>
