--- a/app/backend/teacher.html
+++ b/app/backend/teacher.html
@@ -12,6 +12,7 @@
   <script type="module" src="../components/custom-field.js"></script>
   <script type="module" src="../components/custom-submit-bar.js"></script>
   <script src="../components/toast.js"></script>
+  <script type="module" src="../components/custom-uploader.js"></script>
 
 
 </head>
@@ -25,6 +26,8 @@
   <custom-field bind="introduInput" label="简介" placeholder="请输入关于老师的简单介绍"></custom-field>
 
   <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
+  <custom-uploader bind @submit=""></custom-uploader>
+
   <custom-toast bind="toast"></custom-toast>
 
   <script src="js/teacher.js"></script>
