--- a/app/backend/teachers.html
+++ b/app/backend/teachers.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>课程 - 瑜伽约课微信小程序</title>
+  <title>老师 - 瑜伽约课微信小程序</title>
   <link rel="stylesheet" href="css/teachers.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
-  <script type="module" src="../components/custom-field.js"></script>
-  <script type="module" src="../components/custom-submit-bar.js"></script>
   <script src="../components/toast.js"></script>
-
+  <script type="module" src="../components/custom-bottom-bar.js"></script>
+  <script type="module" src="../components/custom-teachers.js"></script>
 
 </head>
 
@@ -20,10 +19,9 @@
   <custom-drawer bind="customDrawer"></custom-drawer>
   <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
-  <custom-field bind="nameInput" @submit="onNameInput" label="课程名称" placeholder="请输入课程名称"></custom-field>
-  <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
-  <custom-toast bind="toast"></custom-toast>
-
+  <custom-teachers bind="customTeachers"></custom-teachers>
+  <div style="height: 49px;"></div>
+  <custom-bottom-bar bind="customBottomBar" @submit="navigate"></custom-bottom-bar>
   <script src="js/teachers.js"></script>
 </body>
 
