--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>管理员后端 - 瑜伽约课微信小程序</title>
+  <title>管理员后端</title>
   <link rel="stylesheet" href="css/index.css">
-
+  <script src="js/config.js"></script>
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script type="module" src="../components/custom-actions.js"></script>
