--- a/app/backend/schedule.html
+++ b/app/backend/schedule.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>排课 - 瑜伽约课微信小程序</title>
+  <title>排课</title>
   <link rel="stylesheet" href="css/schedule.css">
+<script src="js/config.js"></script>
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script type="module" src="../components/custom-options.js"></script>
