--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>管理员后端</title>
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/config.js"></script>
+  <script src="js/shared.js"></script>
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script type="module" src="../components/custom-actions.js"></script>
