--- a/app/backend/schedule.html
+++ b/app/backend/schedule.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>排课</title>
   <link rel="stylesheet" href="css/schedule.css">
-<script src="js/config.js"></script>
+<script src="js/shared.js"></script>
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script type="module" src="../components/custom-options.js"></script>
