--- a/app/backend/editor.html
+++ b/app/backend/editor.html
@@ -26,7 +26,29 @@
   <custom-bottom-bar bind="customBottomBar" @submit="navigate"></custom-bottom-bar>
   <custom-toast id="toast"></custom-toast>
   <script src="js/editor.js"></script>
+  <script>
+    function formattingJavaScript(textarea) {
+      const options = { indent_size: 2, space_in_empty_paren: true }
 
+      let selected = getSelectedString(textarea);
+      let str = selected || textarea.value;
+      let s;
+
+      if (str.indexOf('</html>') !== -1 || str.indexOf('</view>') !== -1 || str.startsWith("<div")) {
+        s = html_beautify(str, options);
+      } else if (/\)\s+{/.test(str)) {
+        s = js_beautify(str, options);
+      } else {
+        s = css_beautify(str, options);
+      }
+      //const s = str.indexOf('</html>')!==-1 ? : ;
+      if (selected) {
+        replaceSelectedText(textarea, s)
+      } else {
+        textarea.value = s;
+      }
+    }
+  </script>
 </body>
 
 </html>
