--- a/app/backend/notices.html
+++ b/app/backend/notices.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>管理员后端 - 瑜伽约课微信小程序</title>
+  <title>公告</title>
   <link rel="stylesheet" href="css/notices.css">
 </head>
 
@@ -20,6 +20,7 @@
   <script src="js/custom-drawer.js"></script>
   <script src="js/custom-header.js"></script>
   <script src="js/custom-dialog.js"></script>
+  <script src="js/shared.js"></script>
   <script src="js/notices.js"></script>
 </body>
 
