--- a/app/backend/notices.html
+++ b/app/backend/notices.html
@@ -7,18 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>公告</title>
   <link rel="stylesheet" href="css/notices.css">
+  <script type="module" src="../components/custom-header.js"></script>
+  <script type="module" src="../components/custom-drawer.js"></script>
 </head>
 
 <body>
-  <custom-header>
-    <custom-drawer></custom-drawer>
-  </custom-header>
-  <div style="height: 64px;"></div>
+  <custom-drawer bind="customDrawer"></custom-drawer>
+  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <div style="height: 56px;"></div>
   <div class="wrapper">
   </div>
-  </div>
-  <script src="js/custom-drawer.js"></script>
-  <script src="js/custom-header.js"></script>
   <script src="js/custom-dialog.js"></script>
   <script src="js/shared.js"></script>
   <script src="js/notices.js"></script>
