--- a/app/backend/notices.html
+++ b/app/backend/notices.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/notices.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
+  <script type="module" src="../components/custom-bottom-bar.js"></script>
 </head>
 
 <body>
@@ -18,6 +19,7 @@
   <div class="wrapper">
   </div>
   <script src="js/custom-dialog.js"></script>
+  <custom-bottom-bar bind="customBottomBar" @submit="navigate"></custom-bottom-bar>
   <script src="js/shared.js"></script>
   <script src="js/notices.js"></script>
 </body>
