--- a/app/backend/lesson.html
+++ b/app/backend/lesson.html
@@ -32,7 +32,7 @@
   <div class="actions" id="actions">
     <div class="action" id="suspend-lesson">
       <div class="action-image">
-        <svg width="24" height="24" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
+        <svg width="24" height="24" viewBox="0 0 24 24" focusable="false" >
           <path d="M0 0h24v24H0V0z" fill="none" />
           <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
         </svg>
@@ -61,7 +61,7 @@
   <custom-drawer></custom-drawer>
   <div class="bottom-space"></div>
 
-  <div class="popup" id="popup" style="display:none; >
+  <div class="popup" id="popup" style="display:none;">
     <!-- height: 76px;  style=" display:none; "-->
     <div class=" popup-header">
     <div class="popup-button-back" id="popup-button-back">
