--- a/app/backend/notice.html
+++ b/app/backend/notice.html
@@ -2,33 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理员后端 - 瑜伽约课微信小程序</title>
-    <link rel="stylesheet" href="notice.css">
-    <script src="js/custom-input.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>公告</title>
+  <link rel="stylesheet" href="css/notice.css">
+  <script type="module" src="../components/custom-header.js"></script>
+  <script type="module" src="../components/custom-drawer.js"></script>
+  <script src="../components/toast.js"></script>
+  <script type="module" src="../components/custom-submit-bar.js"></script>
+  <script type="module" src="../components/custom-field.js"></script>
 </head>
 
 <body>
-    <custom-header>
-        <custom-drawer></custom-drawer>
-    </custom-header>
-    <div style="height: 64px;"></div>
-    <div class="wrapper">
+  <custom-drawer bind="customDrawer"></custom-drawer>
+  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <div style="height: 56px;"></div>
 
-        <custom-input label="标题" class="title" style="width: 100%;"></custom-input>
-
-        <custom-input label="内容" type="textarea" class="content" style="width: 100%;"></custom-input>
-        <custom-submit-bar class="submit"></custom-submit-bar>
-    </div>
-    <custom-toast id="toast"></custom-toast>
-    <script src="toast.js"></script>
-    <script src="js/custom-drawer.js"></script>
-    <script src="js/custom-submit-bar.js"></script>
-    <script src="js/custom-header.js"></script>
-
-    <script src="notice.js"></script>
+  <custom-field bind="titleInput" label="标题" placeholder="请输入公告标题"></custom-field>
+  <textarea bind="textarea" ></textarea>
+  <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
+  <custom-toast bind="toast"></custom-toast>
+  <script src="js/shared.js"></script>
+  <script src="js/notice.js"></script>
 </body>
 
 </html>
