--- a/app/backend/market.html
+++ b/app/backend/market.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>促销 - 瑜伽约课微信小程序</title>
+  <title>营销</title>
   <link rel="stylesheet" href="market.css">
   <script src="js/custom-input.js"></script>
 </head>
@@ -27,8 +27,8 @@
   <script src="js/custom-drawer.js"></script>
   <script src="js/custom-submit-bar.js"></script>
   <script src="js/custom-header.js"></script>
-
-  <script src="market.js"></script>
+  <script src="js/shared.js"></script>
+  <script src="js/market.js"></script>
 </body>
 
 </html>
