--- a/app/backend/notice.html
+++ b/app/backend/notice.html
@@ -18,7 +18,7 @@
 
 <body style="height:100%">
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="公告" bind @submit="showDrawer"></custom-header>
 
   <div style="display:flex;flex-direction:column;height:100%">
     <div style="height: 56px;"></div>
