--- a/app/backend/notices.html
+++ b/app/backend/notices.html
@@ -14,7 +14,7 @@
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="公告" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
   <div class="wrapper">
   </div>
