--- a/app/backend/schedule.html
+++ b/app/backend/schedule.html
@@ -17,7 +17,7 @@
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="排课" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
   <div style="display:flex;flex-direction:column;gap:12px">
     <custom-options bind="lesson" title="课程"></custom-options>
