--- a/app/backend/teachers.html
+++ b/app/backend/teachers.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>老师 - 瑜伽约课微信小程序</title>
+  <title>老师</title>
   <link rel="stylesheet" href="css/teachers.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
@@ -17,11 +17,12 @@
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="老师" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
   <custom-teachers bind="customTeachers"></custom-teachers>
   <div style="height: 49px;"></div>
   <custom-bottom-bar bind="customBottomBar" @submit="navigate"></custom-bottom-bar>
+  <script src="js/shared.js"></script>
   <script src="js/teachers.js"></script>
 </body>
 
