--- a/app/backend/users.html
+++ b/app/backend/users.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>用户列表 - 微信瑜伽约课程序</title>
+  <title>用户列表</title>
   <link rel="stylesheet" href="css/users.css">
   <script type="module" src="../components/shared.js"></script>
   <script type="module" src="../components/custom-header.js"></script>
@@ -15,7 +15,7 @@
   <script type="module" src="../components/custom-users.js"></script>
   <script type="module" src="../components/custom-button.js"></script>
 
-<script type="module" src="../components/custom-users-buttons.js"></script>
+  <script type="module" src="../components/custom-users-buttons.js"></script>
 
 
 
@@ -24,13 +24,12 @@
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="用户" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
   <custom-users-buttons></custom-users-buttons>
   <custom-users bind="customUsers"></custom-users>
+  <script src="js/shared.js"></script>
   <script src="js/users.js"></script>
 </body>
 
 </html>
-
- 
