--- a/app/backend/editor.html
+++ b/app/backend/editor.html
@@ -20,7 +20,7 @@
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="编辑" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
   <textarea bind="textarea"></textarea>
   <custom-bottom-bar bind="customBottomBar" @submit="navigate"></custom-bottom-bar>
