--- a/app/backend/schedule.html
+++ b/app/backend/schedule.html
@@ -28,7 +28,7 @@
     <custom-options bind="endTime" @submit="onEndTimeSubmit" title="下课时间"></custom-options>
     <custom-options bind="peoples" title="人数"></custom-options>
   </div>
-  <div class="" style="height:68px"></div>
+  <div style="height:68px"></div>
   <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
   <custom-toast bind="toast"></custom-toast>
   <script src="js/shared.js"></script>
