更新日期选择控件

--- a/app/frontend/article.html
+++ b/app/frontend/article.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>瑜伽约课微信小程序</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/default.min.css">
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/highlight.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/go.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/pgsql.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/shell.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/markdown-it@13.0.1/dist/markdown-it.min.js"></script>
 
@@ -36,7 +41,7 @@
   </div>
 
   <div class="markdown" style="padding:16px;">
-  </div> 
+  </div>
   <div style="display:flex;align-items: center;justify-content: center;font-size:12px;padding:32px 32px;">
     © 2022 微信瑜伽约课工具小程序
   </div>
