--- a/app/backend/user.html
+++ b/app/backend/user.html
@@ -5,25 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>课程</title>
+  <title>用户</title>
   <link rel="stylesheet" href="css/user.css">
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
-  <script type="module" src="../components/custom-field.js"></script>
-  <script type="module" src="../components/custom-submit-bar.js"></script>
   <script src="../components/toast.js"></script>
+  <script type="module" src="../components/custom-user-profile.js"></script>
 
 
 </head>
 
 <body>
   <custom-drawer bind="customDrawer"></custom-drawer>
-  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
+  <custom-header title="用户" bind @submit="showDrawer"></custom-header>
   <div style="height: 56px;"></div>
-  <custom-field bind="nameInput" @submit="onNameInput" label="课程名称" placeholder="请输入课程名称"></custom-field>
-  <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
+  <custom-user-profile bind="customUserProfile" @submit=""></custom-user-profile>
   <custom-toast bind="toast"></custom-toast>
-<script src="js/shared.js"></script>
+  <script src="js/shared.js"></script>
   <script src="js/user.js"></script>
 </body>
 
