--- a/app/backend/card.html
+++ b/app/backend/card.html
@@ -12,7 +12,7 @@
   <script type="module" src="../components/custom-field.js"></script>
   <script type="module" src="../components/custom-submit-bar.js"></script>
   <script src="../components/toast.js"></script>
-
+  <script type="module" src="../components/custom-action-sheet.js"></script>
 
 </head>
 
@@ -25,6 +25,7 @@
 
   <custom-submit-bar bind @submit="onSubmitBar"></custom-submit-bar>
   <custom-toast bind="toast"></custom-toast>
+  <custom-action-sheet bind="customActionSheet" @submit=""></custom-action-sheet>
   <script src="js/shared.js"></script>
   <script src="js/card.js"></script>
 </body>
